netflix-clone-proj/netflix-clone-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      containers:
      - name: netflix-app
        image: udubey25/netflix:v1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
