netflix-clone-proj/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  labels:
    app: netflix-app
spec:
        #type: NodePort
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30007
  selector:
    app: netflix-app
