netflix-clone-proj/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: selfstream.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-app
            port:
              number: 80
